--- a/lq1/default.cfg
+++ b/lq1/default.cfg
@@ -1,5 +1,4 @@
 //========Default Config========\\
-
 //Movement Keys
 bind	"w"			"+forward"
 bind	"a"			"+moveleft"
@@ -44,6 +43,14 @@ bind	"`"			"toggleconsole"
 bind	"t"			"messagemode"
 bind 	"TAB" 		"+showscores"
 
+//Misc
+alias	"freeze"	"toggle sv_freezenonclients;echo toggled_freeze	
+alias	"dev"	"exec .dev.cfg
+alias	"zoom"		"exec .zoom.cfg"
+alias 		
+bind	"k"			"kill;clear;echo Dead"
+
+
 //cvars
 sensitivity 	3
 viewsize 		100
@@ -52,11 +59,14 @@ gamma 			1
 contrast 		1
 crosshair 		1
 sensitivity 	3
-scr_conalpha 	0.5
-scr_conscale 	1
+scr_conalpha 	0.9
+scr_conscale 	2
 scr_conspeed 	500
 scr_conwidth 	0
+scr_menuscale	5
 scr_showfps 	1
+r_particles		2
+r_viewmodel_quake 1
 +mlook
 fov 90
 gl_texturemode GL_NEAREST_MIPMAP_NEAREST
