--- a/lq1/dev.cfg
+++ b/lq1/dev.cfg
@@ -4,6 +4,9 @@ bind f "toggle r_fullbright"
 bind h "toggle r_showbboxes"
 bind b "toggle r_showtris"
 bind c freeze
+bind g god
+bind p fullammo
+bind l quad
 clear
 echo v = noclip
 echo " "
@@ -16,3 +19,9 @@ echo " "
 echo b = showtris
 echo " "
 echo c = freeze
+echo " "
+echo g = god
+echo " "
+echo p = fullammo
+echo " "
+echo l = quad
