--- a/lq1/default.cfg
+++ b/lq1/default.cfg
@@ -1,4 +1,4 @@
-//========Default Config========\\
+//========LQ Default Config========\\
 //Movement Keys
 bind	"w"			"+forward"
 bind	"a"			"+moveleft"
@@ -22,6 +22,7 @@ bind	"5"			"impulse 5"
 bind	"6"			"impulse 6"
 bind	"7"			"impulse 7"
 bind	"8"			"impulse 8"
+
 //Alternate Weapons
 bind	"q"			"impulse 10"
 bind 	"MWHEELUP"	"impulse 10"
@@ -45,9 +46,11 @@ bind 	"TAB" 		"+showscores"
 
 //Misc
 alias	"freeze"	"toggle sv_freezenonclients;echo toggled_freeze	
-alias	"dev"	"exec .dev.cfg
-alias	"zoom"		"exec .zoom.cfg"
-alias 		
+alias	"dev"		"exec dev.cfg
+alias	"zoom"		"exec zoom.cfg"
+alias 	"idkfa"		"impulse 9"
+alias 	"fullammo"	"impulse 9"
+alias	"quad"		"impulse 255"
 bind	"k"			"kill;clear;echo Dead"
 
 
@@ -65,6 +68,8 @@ scr_conspeed 	500
 scr_conwidth 	0
 scr_menuscale	5
 scr_showfps 	1
+scr_sbaralpha	1
+scr_sbarscale	2	
 r_particles		2
 r_viewmodel_quake 1
 +mlook
