--- a/lq1/default.cfg
+++ b/lq1/default.cfg
@@ -33,7 +33,7 @@ bind	"f1"		"help"
 bind	"f2"		"menu_save"
 bind	"f3"		"menu_load"
 bind	"f4"		"menu_options"
-bind	"f5"		"menu_multiplayer
+bind	"f5"		"menu_multiplayer"	
 bind	"f6"		"echo Saving; wait; save lq_quick"
 bind	"f9"		"echo Loading; wait; load lq_quick" 
 bind	"f10"		"quit"
@@ -55,6 +55,7 @@ bind	"k"			"kill;clear;echo Dead"
 
 
 //cvars
+registered
 sensitivity 	3
 viewsize 		100
 volume 			0.7
