--- a/lq1/config.cfg
+++ b/lq1/config.cfg
@@ -1,14 +1,7 @@
 unbindall
 bind "TAB" "+showscores"
-bind "ENTER" "+jump"
 bind "ESCAPE" "togglemenu"
 bind "SPACE" "+jump"
-bind "+" "sizeup"
-bind "," "+moveleft"
-bind "-" "sizedown"
-bind "." "+moveright"
-bind "/" "impulse 10"
-bind "0" "impulse 0"
 bind "1" "impulse 1"
 bind "2" "impulse 2"
 bind "3" "impulse 3"
@@ -17,45 +10,37 @@ bind "5" "impulse 5"
 bind "6" "impulse 6"
 bind "7" "impulse 7"
 bind "8" "impulse 8"
-bind "=" "sizeup"
-bind "\" "+mlook"
 bind "`" "toggleconsole"
 bind "a" "+moveleft"
-bind "c" "+movedown"
+bind "b" "toggle r_showtris"
+bind "c" "freeze"
 bind "d" "+moveright"
 bind "e" "+movedown"
+bind "f" "toggle r_fullbright"
+bind "g" "god"
+bind "h" "toggle r_showbboxes"
 bind "k" "kill;clear;echo Dead"
+bind "l" "quad"
+bind "n" "notarget"
+bind "p" "fullammo"
 bind "q" "impulse 10"
 bind "r" "+moveup"
 bind "s" "+back"
 bind "t" "messagemode"
+bind "v" "noclip"
 bind "w" "+forward"
-bind "z" "+lookdown"
-bind "~" "toggleconsole"
-bind "UPARROW" "+forward"
-bind "DOWNARROW" "+back"
-bind "LEFTARROW" "+left"
-bind "RIGHTARROW" "+right"
 bind "ALT" "+strafe"
-bind "CTRL" "+attack"
 bind "SHIFT" "+speed"
 bind "F1" "help"
 bind "F2" "menu_save"
 bind "F3" "menu_load"
 bind "F4" "menu_options"
-bind "F5" "menu_multiplayer"
+bind "F5" "menu_multiplayer"
 bind "F6" "echo Saving; wait; save lq_quick"
 bind "F9" "echo Loading; wait; load lq_quick"
 bind "F10" "quit"
-bind "F11" "zoom_in"
 bind "F12" "screenshot"
-bind "INS" "+klook"
-bind "DEL" "+lookdown"
-bind "PGDN" "+lookup"
-bind "END" "centerview"
 bind "MOUSE1" "+attack"
-bind "MOUSE2" "+forward"
-bind "MOUSE3" "+mlook"
 bind "MWHEELUP" "impulse 10"
 bind "MWHEELDOWN" "impulse 12"
 bind "PAUSE" "pause"
@@ -70,15 +55,6 @@ cl_backspeed "200"
 cl_forwardspeed "200"
 cl_maxpitch "90"
 cl_minpitch "-90"
-cl_voip_autogain "0"
-cl_voip_capturingvol "0.5"
-cl_voip_codec ""
-cl_voip_ducking "0.5"
-cl_voip_micamp "2"
-cl_voip_noisefilter "1"
-cl_voip_opus_bitrate "3000"
-cl_voip_play "1"
-cl_voip_showmeter "1"
 contrast "1"
 crosshair "1"
 external_ents "1"
@@ -87,14 +63,13 @@ gamma "1"
 gl_farclip "16384"
 gl_flashblend "0"
 gl_fullbrights "1"
-gl_load24bit "1"
 gl_overbright "1"
 gl_overbright_models "1"
 gl_subdivide_size "128"
 gl_texture_anisotropy "1"
 gl_texturemode "GL_NEAREST_MIPMAP_NEAREST"
 gl_triplebuffer "1"
-host_maxfps "72"
+host_maxfps "40"
 joy_deadzone "0.175"
 joy_deadzone_trigger "0.2"
 joy_enable "1"
@@ -137,14 +112,14 @@ sensitivity "3"
 sv_altnoclip "1"
 sys_throttle "0.02"
 vid_borderless "0"
-vid_bpp "24"
+vid_bpp "32"
 vid_desktopfullscreen "0"
 vid_fsaa "0"
 vid_fullscreen "0"
-vid_height "600"
+vid_height "480"
 vid_refreshrate "60"
-vid_vsync "1"
-vid_width "800"
+vid_vsync "0"
+vid_width "640"
 viewsize "100"
 volume "0.7"
 vid_restart
