--- a/lq1/config.cfg
+++ b/lq1/config.cfg
@@ -41,6 +41,7 @@ bind "F9" "echo Loading; wait; load lq_quick"
 bind "F10" "quit"
 bind "F12" "screenshot"
 bind "MOUSE1" "+attack"
+bind "MOUSE2" "+zoom"
 bind "MWHEELUP" "impulse 10"
 bind "MWHEELDOWN" "impulse 12"
 bind "PAUSE" "pause"
@@ -55,6 +56,15 @@ cl_backspeed "200"
 cl_forwardspeed "200"
 cl_maxpitch "90"
 cl_minpitch "-90"
+cl_voip_autogain "0"
+cl_voip_capturingvol "0.5"
+cl_voip_codec ""
+cl_voip_ducking "0.5"
+cl_voip_micamp "2"
+cl_voip_noisefilter "1"
+cl_voip_opus_bitrate "3000"
+cl_voip_play "1"
+cl_voip_showmeter "1"
 contrast "1"
 crosshair "1"
 external_ents "1"
@@ -63,6 +73,7 @@ gamma "1"
 gl_farclip "16384"
 gl_flashblend "0"
 gl_fullbrights "1"
+gl_load24bit "1"
 gl_overbright "1"
 gl_overbright_models "1"
 gl_subdivide_size "128"
@@ -112,14 +123,14 @@ sensitivity "3"
 sv_altnoclip "1"
 sys_throttle "0.02"
 vid_borderless "0"
-vid_bpp "32"
+vid_bpp "24"
 vid_desktopfullscreen "0"
 vid_fsaa "0"
 vid_fullscreen "0"
-vid_height "900"
+vid_height "800"
 vid_refreshrate "60"
 vid_vsync "0"
-vid_width "1600"
+vid_width "1280"
 viewsize "100"
 volume "0.7"
 vid_restart
