--- a/lq1/default.cfg
+++ b/lq1/default.cfg
@@ -51,6 +51,7 @@ alias	"zoom"		"exec zoom.cfg"
 alias 	"idkfa"		"impulse 9"
 alias 	"fullammo"	"impulse 9"
 alias	"quad"		"impulse 255"
+alias	"impulse 101"	"impulse 9"
 bind	"k"		"kill;clear;echo Dead"
 bind	"+"		"sizeup"
 bind	"="		"sizeup"
@@ -80,5 +81,5 @@ r_particles		2
 r_viewmodel_quake 1
 +mlook
 fov 90
-gl_texturemode GL_NEAREST
+gl_texturemode GL_NEAREST_MIPMAP_LINEAR
 vid_restart
