--- a/lq1/config.cfg
+++ b/lq1/config.cfg
@@ -71,7 +71,7 @@ gl_overbright "1"
 gl_overbright_models "1"
 gl_subdivide_size "128"
 gl_texture_anisotropy "1"
-gl_texturemode "GL_NEAREST"
+gl_texturemode "GL_NEAREST_MIPMAP_LINEAR"
 gl_triplebuffer "1"
 host_maxfps "100"
 joy_deadzone "0.175"
@@ -120,10 +120,10 @@ vid_bpp "32"
 vid_desktopfullscreen "0"
 vid_fsaa "0"
 vid_fullscreen "0"
-vid_height "900"
+vid_height "1600"
 vid_refreshrate "60"
 vid_vsync "0"
-vid_width "1600"
+vid_width "2560"
 viewsize "100"
 volume "0.7"
 vid_restart
