--- a/lq1/zoom120.cfg
+++ b/lq1/zoom120.cfg
@@ -9,4 +9,5 @@ echo " "
 echo "Heads up!"
 echo "by default this is set to fov 120"
 echo " "
-echo "[open zoom.cfg to change fov]"	
+echo "[open zoom120.cfg to change fov]"	
+echo "or swap to zoom90"
