--- a/lq1/zoom90.cfg
+++ b/lq1/zoom90.cfg
@@ -1,12 +1,13 @@
 bind mouse2 +zoom
-alias +zoom "fov 110;wait;fov 100;wait;fov 90;wait;fov 80;wait;fov 70;wait;fov 60;wait;fov 50;wait;fov 40"
-alias -zoom "fov 50;wait;fov 60;wait;fov 70;wait;fov 80;wait;fov 90;wait;fov 100;wait;fov 110;wait;fov 120"
+alias +zoom "fov 90;wait;fov 80;wait;fov 70;wait;fov 60;wait;fov 50;wait;fov 40"
+alias -zoom "fov 50;wait;fov 60;wait;fov 70;wait;fov 80;wait;fov 90"
 clear
 
 
 echo "Mouse2 = zoom"
 echo " "
 echo "Heads up!"
-echo "by default this is set to fov 120"
+echo "by default this is set to fov 90"
 echo " "
-echo "[open zoom.cfg to change fov]"	
+echo "[open zoom90.cfg to change fov]"	
+echo "or swap to zoom120"
