updated alot of little things over past few days and also made it able to run with out the need for id1 quake

--- a/lq1/dev.cfg
+++ b/lq1/dev.cfg
@@ -5,7 +5,7 @@ bind h "toggle r_showbboxes"
 bind b "toggle r_showtris"
 bind c freeze
 bind g god
-bind p fullammo
+bind p impulse 9
 bind l quad
 clear
 echo v = noclip
