--- a/lq1/default.cfg
+++ b/lq1/default.cfg
@@ -1,4 +1,5 @@
 //========LQ Default Config========\\
+unbindall
 //Movement Keys
 bind	"w"			"+forward"
 bind	"a"			"+moveleft"
@@ -22,8 +23,10 @@ bind	"5"			"impulse 5"
 bind	"6"			"impulse 6"
 bind	"7"			"impulse 7"
 bind	"8"			"impulse 8"
+bind	"0"			"impulse 0"
 
 //Alternate Weapons
+bind	"/"			"impulse 10"
 bind	"q"			"impulse 10"
 bind 	"MWHEELUP"	"impulse 10"
 bind 	"MWHEELDOWN" "impulse 12"
@@ -46,14 +49,13 @@ bind 	"TAB" 		"+showscores"
 
 //Misc
 alias	"freeze"	"toggle sv_freezenonclients;echo toggled_freeze	
-alias	"dev"		"exec dev.cfg
+alias	"dev"		"exec dev.cfg"
 alias	"zoom90"	"exec zoom90.cfg"
 alias	"zoom120"	"exec zoom120.cfg"
 alias 	"idkfa"		"impulse 9"
 alias 	"fullammo"	"impulse 9"
 alias	"quad"		"impulse 255"
-alias	"impulse 101"	"impulse 9"
-bind	"k"		"kill;clear;echo Dead"
+bind	"k"		"kill;echo Dead"
 bind	"+"		"sizeup"
 bind	"="		"sizeup"
 bind	"-"		"sizedown"
@@ -61,26 +63,18 @@ bind	"-"		"sizedown"
 
 //cvars
 
-fov_adapt 0
-sndspeed 384000
 sensitivity 	3
 viewsize 		100
 volume 			0.7
 gamma 			1
 contrast 		1
 crosshair 		1
-sensitivity 	3
-scr_conalpha 	0.9
-scr_conscale 	2
-scr_conspeed 	500
-scr_conwidth 	0
 scr_menuscale	5
-scr_showfps 	1
-scr_sbaralpha	1
-scr_sbarscale	2	
-r_particles		2
-r_viewmodel_quake 1
+sensitivity 	3
+scr_conspeed 	500
+scr_showfps 	1	
 +mlook
-fov 90
 gl_texturemode GL_NEAREST_MIPMAP_LINEAR
+vid_height "720"
+vid_width "1280"
 vid_restart
