ammo shading fixed -nolcoz

--- a/lq1/QDOS.CFG
+++ b/lq1/QDOS.CFG
@@ -60,89 +60,86 @@ bind MOUSE3 "+mlook"
 bind MWHEELUP "impulse 10"
 bind MWHEELDOWN "impulse 12"
 bind PAUSE "pause"
-set v_contentblend "1"
-set crosshaircolor "79"
-set crosshair "0"
-set cl_crossx "0"
-set cl_crossy "0"
-set gamma "1.0"
-set savedgamecfg "0"
-set saved1 "0"
-set saved2 "0"
-set saved3 "0"
-set saved4 "0"
-set _config_com_port "1016"
-set _config_com_irq "4"
-set _config_com_baud "57600"
-set _config_com_modem "1"
-set _config_modem_dialtype "T"
-set _config_modem_clear "ATZ"
-set _config_modem_init ""
-set _config_modem_hangup "AT H"
-set sv_loadentfiles "1"
-set sv_altnoclip "1"
-set sv_master_server_ip "maraakate.org"
-set sv_master_server_port "27900"
-set vid_wait "0"
-set vid_nopageflip "0"
-set _vid_wait_override "0"
-set _vid_default_mode "0"
-set _vid_default_mode_win "1"
-set vid_config_x "800"
-set vid_config_y "600"
-set vid_stretch_by_2 "1"
-set _windowed_mouse "0"
-set vid_fullscreen_mode "3"
-set vid_windowed_mode "0"
-set block_switch "0"
-set vid_window_x "0"
-set vid_window_y "0"
-set viewsize "100"
-set show_fps "0"
-set show_time "0"
-set show_uptime "0"
-set r_waterwarp "1"
-set r_gunfov "75"
-set sw_particle_size_override "0"
-set sw_particle_size_min "1"
-set sw_particle_size_max "8.5"
-set sw_particle_size "8"
-set volume "0.7"
-set bgmvolume "1"
-set _snd_mixahead "0.2"
-set s_khz ""
-set s_musicvolume "1.0"
-set ogg_loopcount "5"
-set ogg_ambient_track "11"
-set wav_loopcount "5"
-set wav_ambient_track "track11"
-set in_freelook "1.0"
-set _cl_name "player"
-set _cl_color "0"
-set cl_forwardspeed "400"
-set cl_backspeed "400"
-set lookspring "0"
-set lookstrafe "0"
-set sensitivity "3"
-set m_pitch "0.022"
-set m_yaw "0.022"
-set m_forward "1"
-set m_side "0.8"
-set cl_master_server_ip "maraakate.org"
-set cl_master_server_port "28900"
-set cl_master_server_queries "10"
-set cl_master_server_timeout "3000"
-set cl_master_server_retries "20"
-set cl_master_server_optout "0"
-set snd_gamespy_sounds "0"
-set console_old_complete "0"
-set cl_ogg_music "1"
-set cl_wav_music "1"
-set cl_autorepeat_allkeys "0"
-set cl_sleep "0"
+set joystick "0"
 set m_filter "0"
-set joybuttons "4"
-set auxlook "1"
+set cl_sleep "0"
+set cl_autorepeat_allkeys "0"
+set cl_wav_music "1"
+set cl_ogg_music "1"
+set console_old_complete "0"
+set snd_gamespy_sounds "0"
+set cl_master_server_optout "0"
+set cl_master_server_retries "20"
+set cl_master_server_timeout "3000"
+set cl_master_server_queries "10"
+set cl_master_server_port "28900"
+set cl_master_server_ip "maraakate.org"
+set m_side "0.8"
+set m_forward "1"
+set m_yaw "0.022"
+set m_pitch "0.022"
+set sensitivity "3"
+set lookstrafe "0"
+set lookspring "0"
+set cl_backspeed "400"
+set cl_forwardspeed "400"
+set _cl_color "0"
+set _cl_name "player"
+set in_freelook "1.0"
+set wav_ambient_track "track11"
+set wav_loopcount "5"
+set ogg_ambient_track "11"
+set ogg_loopcount "5"
+set s_musicvolume "1.0"
+set s_khz ""
+set _snd_mixahead "0.2"
+set bgmvolume "1"
+set volume "0.7"
+set sw_particle_size "8"
+set sw_particle_size_max "8.5"
+set sw_particle_size_min "1"
+set sw_particle_size_override "0"
+set r_waterwarp "1"
+set show_uptime "0"
+set show_time "0"
+set show_fps "0"
+set viewsize "100"
+set vid_window_y "281"
+set vid_window_x "568"
+set block_switch "0"
+set vid_windowed_mode "0"
+set vid_fullscreen_mode "3"
+set _windowed_mouse "0"
+set vid_stretch_by_2 "1"
+set vid_config_y "600"
+set vid_config_x "800"
+set _vid_default_mode_win "1"
+set _vid_default_mode "0"
+set _vid_wait_override "0"
+set vid_nopageflip "0"
+set sv_master_server_port "27900"
+set sv_master_server_ip "maraakate.org"
+set sv_altnoclip "1"
+set sv_loadentfiles "1"
+set _config_modem_hangup "AT H"
+set _config_modem_init ""
+set _config_modem_clear "ATZ"
+set _config_modem_dialtype "T"
+set _config_com_modem "1"
+set _config_com_baud "57600"
+set _config_com_irq "4"
+set _config_com_port "1016"
+set saved4 "0"
+set saved3 "0"
+set saved2 "0"
+set saved1 "0"
+set savedgamecfg "0"
+set gamma "1.0"
+set cl_crossy "0"
+set cl_crossx "0"
+set crosshair "0"
+set crosshaircolor "79"
+set v_contentblend "1"
 set con_show_dev_flags "1"
 set con_show_description "1"
 set cl_maxfps "72.0"
