update before move

--- a/lq1/quake.rc
+++ b/lq1/quake.rc
@@ -13,7 +13,7 @@ stuffcmds
 // demos
 //startdemos demo1 demo2 demo3
 
-
+clear
 
 Echo =============================
 Echo check out the new comands
