--- a/lq1/dev.cfg
+++ b/lq1/dev.cfg
@@ -1,5 +1,6 @@
 bind v noclip
 bind n notarget
+bind f5 "toggle chase_active"
 bind f "toggle r_fullbright"
 bind h "toggle r_showbboxes"
 bind b "toggle r_showtris"
@@ -17,6 +18,8 @@ echo " "
 echo h = hitboxes
 echo " "
 echo b = showtris
+echo " "
+echo f5 = third person / chase cam
 echo " "
 echo c = freeze
 echo " "
