all configs updated

--- a/lq1/default.cfg
+++ b/lq1/default.cfg
@@ -8,10 +8,8 @@ bind	"d"			"+moveright"
 bind	"SPACE"		"+jump"
 bind	"ALT"		"+strafe"
 bind	"SHIFT"		"+speed"
-
-//Swim Keys
-bind	"e"			"+movedown"
-bind	"r"			"+moveup"
+bind	"e"		"+moveup"
+bind	"CTRL"		"+movedown"
 
 //Weapon Keys
 bind	"MOUSE1"	"+attack"
@@ -32,14 +30,14 @@ bind 	"MWHEELUP"	"impulse 10"
 bind 	"MWHEELDOWN" "impulse 12"
 
 //Menus
-bind	"f1"		"help"
+bind	"f1"		"toggle r_drawviewmodel"
 bind	"f2"		"menu_save"
 bind	"f3"		"menu_load"
 bind	"f4"		"menu_options"
-bind	"f5"		"menu_multiplayer"	
+bind	"f5"		"toggle chase_active"
 bind	"f6"		"echo Saving; wait; save lq_quick"
 bind	"f9"		"echo Loading; wait; load lq_quick" 
-bind	"f10"		"quit"
+bind	"f10"		"echo f10 is unbound"
 bind    "f12"       "screenshot"
 bind	"PAUSE"		"pause"
 bind	"ESCAPE"	"togglemenu"
@@ -47,16 +45,25 @@ bind	"`"			"toggleconsole"
 bind	"t"			"messagemode"
 bind 	"TAB" 		"+showscores"
 
+bind "F1" "toggle r_drawviewmodel"
+bind "F5" "toggle chase_active"
+
 //Misc
-alias	"freeze"	"toggle sv_freezenonclients;echo toggled_freeze	
-alias	"dev"		"exec dev.cfg"
-alias	"zoom90"	"exec zoom90.cfg"
-alias	"zoom120"	"exec zoom120.cfg"
-alias 	"idkfa"		"impulse 9"
-alias 	"fullammo"	"impulse 9"
-alias	"quad"		"impulse 255"
-bind	"k"		"kill;echo Dead"
 bind	"+"		"sizeup"
 bind	"="		"sizeup"
 bind	"-"		"sizedown"
 
+//Configs
+alias	"dev"		"exec dev.cfg"
+alias	"zoom90"	"exec zoom90.cfg"
+alias	"zoom120"	"exec zoom120.cfg"
+
+//Alias
+alias	"freeze"	"toggle sv_freezenonclients;echo toggled_freeze
+alias 	"idkfa"		"impulse 9"
+alias 	"fullammo"	"impulse 9"
+alias	"quad"		"impulse 255"
+alias +lq-zoom90 "fov 90;wait;fov 80;wait;fov 70;wait;fov 60;wait;fov 50;wait;fov 40"
+alias -lq-zoom90 "fov 50;wait;fov 60;wait;fov 70;wait;fov 80;wait;fov 90"
+alias +lq-zoom120 "fov 110;wait;fov 100;wait;fov 90;wait;fov 80;wait;fov 70;wait;fov 60;wait;fov 50;wait;fov 40"
+alias -lq-zoom120 "fov 50;wait;fov 60;wait;fov 70;wait;fov 80;wait;fov 90;wait;fov 100;wait;fov 110;wait;fov 120"
