--- a/lq1/dev.cfg
+++ b/lq1/dev.cfg
@@ -1,13 +1,20 @@
+//Alias
+alias	"freeze"	"toggle sv_freezenonclients;echo toggled_freeze"
+alias 	"fullammo"	"impulse 9"
+alias	"quad"		"impulse 255"
+
+// binds
 bind v noclip
 bind n notarget
-bind f5 "toggle chase_active"
 bind f "toggle r_fullbright"
 bind h "toggle r_showbboxes"
 bind b "toggle r_showtris"
 bind c freeze
 bind g god
-bind p impulse 9
+bind p fullammo
 bind l quad
+bind k kill
+
 clear
 echo v = noclip
 echo " "
@@ -19,8 +26,6 @@ echo h = hitboxes
 echo " "
 echo b = showtris
 echo " "
-echo f5 = third person / chase cam
-echo " "
 echo c = freeze
 echo " "
 echo g = god
@@ -28,3 +33,5 @@ echo " "
 echo p = fullammo
 echo " "
 echo l = quad
+echo " "
+echo k = kill
