--- a/lq1/quake.rc
+++ b/lq1/quake.rc
@@ -13,10 +13,12 @@ stuffcmds
 // demos
 //startdemos demo1 demo2 demo3
 
-clear
-
+Echo
+Echo
+Echo
+Echo
 Echo =============================
 Echo check out the new comands
-echo Zoom for the zoom function
-echo Dev for dev bindings
+Echo Zoom for the zoom function
+Echo Dev for dev bindings
 Echo =============================
