--- a/lq1/zoom120.cfg
+++ b/lq1/zoom120.cfg
@@ -1,9 +1,8 @@
-bind mouse2 +zoom
-alias +zoom "fov 110;wait;fov 100;wait;fov 90;wait;fov 80;wait;fov 70;wait;fov 60;wait;fov 50;wait;fov 40"
-alias -zoom "fov 50;wait;fov 60;wait;fov 70;wait;fov 80;wait;fov 90;wait;fov 100;wait;fov 110;wait;fov 120"
+bind mouse2 +lq-zoom120
+alias +lq-zoom120 "fov 110;wait;fov 100;wait;fov 90;wait;fov 80;wait;fov 70;wait;fov 60;wait;fov 50;wait;fov 40"
+alias -lq-zoom120 "fov 50;wait;fov 60;wait;fov 70;wait;fov 80;wait;fov 90;wait;fov 100;wait;fov 110;wait;fov 120"
+
 clear
-
-
 echo "Mouse2 = zoom"
 echo " "
 echo "Heads up!"
