--- a/lq1/zoom90.cfg
+++ b/lq1/zoom90.cfg
@@ -1,13 +1,12 @@
-bind mouse2 +zoom
-alias +zoom "fov 90;wait;fov 80;wait;fov 70;wait;fov 60;wait;fov 50;wait;fov 40"
-alias -zoom "fov 50;wait;fov 60;wait;fov 70;wait;fov 80;wait;fov 90"
+bind mouse2 +lq-zoom90
+alias +lq-zoom90 "fov 90;wait;fov 80;wait;fov 70;wait;fov 60;wait;fov 50;wait;fov 40"
+alias -lq-zoom90 "fov 50;wait;fov 60;wait;fov 70;wait;fov 80;wait;fov 90"
+
 clear
-
-
 echo "Mouse2 = zoom"
 echo " "
 echo "Heads up!"
 echo "by default this is set to fov 90"
 echo " "
-echo "[open zoom90.cfg to change fov]"	
+echo "[open zoom90.cfg to change fov]"
 echo "or swap to zoom120"
