--- a/lq1/maps/src/-buildconfigs-/e4/e4m1.conf
+++ b/lq1/maps/src/-buildconfigs-/e4/e4m1.conf
@@ -1,4 +1,3 @@
 LQ_BSP_FLAGS="-transwater -splitturb"
-LQ_VIS_FLAGS=""
-LQ_LIG_FLAGS="-extra4 -bounce -dirt" 
-
+LQ_VIS_FLAGS="-noambient"
+LQ_LIG_FLAGS="-bounce -bouncestyled -dirt" 
