--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@ releases/
 lq1/maps/+make-make.desktop
 lq1/maps/.bmodelbspbak.7z
 lq1/config.cfg
+lq1/progs.dat
 lq-pl.png
 lq-pl.xcf
 .directory
@@ -21,6 +22,7 @@ lq-pl.xcf
 *.lit
 *.vis
 *.log
+*.lno
 *.texinfo
 *.wad
 *.pts
