--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@ lq1/maps/+make-make.desktop
 lq1/maps/.bmodelbspbak.7z
 lq1/config.cfg
 lq1/progs.dat
+lq1/gfx/pop.png
 lq-pl.png
 lq-pl.xcf
 .directory
