--- a/build_components.json
+++ b/build_components.json
@@ -663,7 +663,7 @@
             "gfx/menudot4.lmp",
             "gfx/menudot5.lmp",
             "gfx/menudot6.lmp",
-            "gfx/menuplr.lmp",
+            "gfx/menuplyr.lmp",
             "gfx/mp_menu.lmp",
             "gfx/netmen1.lmp",
             "gfx/netmen2.lmp",
