--- a/build_releases.json
+++ b/build_releases.json
@@ -43,7 +43,8 @@
             "models",
             "brush_models",
             "maps_e0",
-            "gfx"
+            "gfx",
+            "lite_assets"
         ]
     },
     "dev": {
