--- a/lq1/dev.cfg
+++ b/lq1/dev.cfg
@@ -11,8 +11,8 @@ bind h "toggle r_showbboxes"
 bind b "toggle r_showtris"
 bind c freeze
 bind g god
-bind p fullammo
-bind l quad
+bind p "impulse 9"
+bind l "impulse 255"
 bind k kill
 
 clear
