--- a/lq1/default.cfg
+++ b/lq1/default.cfg
@@ -52,6 +52,9 @@ bind "F5" "toggle chase_active"
 bind	"+"		"sizeup"
 bind	"="		"sizeup"
 bind	"-"		"sizedown"
++mlook
++speed
+crosshair 1
 
 //Configs
 alias	"dev"		"exec dev.cfg"
@@ -59,7 +62,7 @@ alias	"zoom90"	"exec zoom90.cfg"
 alias	"zoom120"	"exec zoom120.cfg"
 
 //Alias
-alias	"freeze"	"toggle sv_freezenonclients;echo toggled_freeze
+alias	"freeze"	"toggle sv_freezenonclients;echo toggled_freeze"
 alias 	"idkfa"		"impulse 9"
 alias 	"fullammo"	"impulse 9"
 alias	"quad"		"impulse 255"
