demos are now in!
Cam code that made this possible was made by  @MotoLegacy

demos/shots taken by me

maps used
e0m1 e0m2 e0m3 - RandomBrushes
e1m2 - Zungryware / ZungrySoft
e2m5 e3m4 -Nolcoz

Co-Authored-By: cypress <motolegacy@proton.me>
Co-Authored-By: ZungryWare <zungrysoftentertainment@gmail.com>
Co-Authored-By: Nolcoz <142278676+Nolcoz@users.noreply.github.com>
Co-Authored-By: RandomBrushes <151439263+RandomBrushes@users.noreply.github.com>

--- a/build_components.json
+++ b/build_components.json
@@ -40,6 +40,7 @@
         ],
         "files_pak1": [],
         "files_unpacked": [
+            "cam.cfg",
             "dev.cfg",
             "zoom90.cfg",
             "zoom120.cfg"
@@ -528,7 +529,10 @@
             ["maps/b_bh25_lite.bsp", "maps/b_bh25.bsp"],
             ["maps/b_bh10_lite.bsp", "maps/b_bh10.bsp"],
             ["maps/b_batt1_lite.bsp", "maps/b_batt1.bsp"],
-            ["maps/b_batt0_lite.bsp", "maps/b_batt0.bsp"]
+            ["maps/b_batt0_lite.bsp", "maps/b_batt0.bsp"],
+            ["demo1_lite.dem", "demo1.dem"],
+            ["demo2_lite.dem", "demo2.dem"],
+            ["demo3_lite.dem", "demo3.dem"]
         ],
         "files_pak1": [],
         "files_unpacked": []
