--- a/lq1/default.cfg
+++ b/lq1/default.cfg
@@ -57,6 +57,7 @@ bind	"-"		"sizedown"
 crosshair 1
 
 //Configs
+alias	"cam"		"exec cam.cfg"
 alias	"dev"		"exec dev.cfg"
 alias	"zoom90"	"exec zoom90.cfg"
 alias	"zoom120"	"exec zoom120.cfg"
