--- a/lq1/dev.cfg
+++ b/lq1/dev.cfg
@@ -1,3 +1,4 @@
+
 //Alias
 alias	"freeze"	"toggle sv_freezenonclients;echo toggled_freeze"
 alias 	"fullammo"	"impulse 9"
@@ -6,6 +7,7 @@ alias	"quad"		"impulse 255"
 // binds
 bind v noclip
 bind n notarget
+bind # "toggle developer"
 bind f "toggle r_fullbright"
 bind h "toggle r_showbboxes"
 bind b "toggle r_showtris"
@@ -19,6 +21,8 @@ clear
 echo v = noclip
 echo " "
 echo n = notarget
+echo " "
+bind # = developer mode
 echo " "
 echo f = fullbright
 echo " "
