--- a/lq1/quake.rc
+++ b/lq1/quake.rc
@@ -15,12 +15,13 @@ startdemos demo1 demo2 demo3
 
 wait
 Echo
-Echo
-Echo
-Echo
-Echo =============================
+Echo ==============================
 Echo check out the new comands
 Echo Zoom90 or Zoom120 for the zoom function
 Echo Dev for dev bindings
-Echo cam for the new camera system we use for the main menu demos
-Echo =============================
+Echo Cam for the new camera system we use for the main menu demos
+Echo ==============================
+Echo
+Echo ==============================
+Echo LibreQuake Version V0.06-beta
+Echo ==============================
