--- a/lq1/default.cfg
+++ b/lq1/default.cfg
@@ -8,7 +8,7 @@ bind	"d"			"+moveright"
 bind	"SPACE"		"+jump"
 bind	"ALT"		"+strafe"
 bind	"SHIFT"		"+speed"
-bind	"e"		"+moveup"
+bind	"e"		    "+moveup"
 bind	"CTRL"		"+movedown"
 
 //Weapon Keys
@@ -30,23 +30,25 @@ bind 	"MWHEELUP"	"impulse 10"
 bind 	"MWHEELDOWN" "impulse 12"
 
 //Menus
-bind	"f1"		"toggle r_drawviewmodel"
+bind	"f1"		"help"
+//bind	"f1"		"toggle r_drawviewmodel"
 bind	"f2"		"menu_save"
 bind	"f3"		"menu_load"
 bind	"f4"		"menu_options"
-bind	"f5"		"toggle chase_active"
+bind	"f5"		"menu_multiplayer"
+//bind	"f5"		"toggle chase_active"
 bind	"f6"		"echo Saving; wait; save lq_quick"
 bind	"f9"		"echo Loading; wait; load lq_quick" 
 bind	"f10"		"echo f10 is unbound"
 bind    "f12"       "screenshot"
+bind    "PRINTSCREEN" "screenshot"
 bind	"PAUSE"		"pause"
 bind	"ESCAPE"	"togglemenu"
 bind	"`"			"toggleconsole"
 bind	"t"			"messagemode"
+bind	"enter"		"messagemode"
 bind 	"TAB" 		"+showscores"
 
-bind "F1" "toggle r_drawviewmodel"
-bind "F5" "toggle chase_active"
 
 //Misc
 bind	"+"		"sizeup"
@@ -54,7 +56,15 @@ bind	"="		"sizeup"
 bind	"-"		"sizedown"
 +mlook
 +speed
-crosshair 1
+
+//Cvars
+gl_texturemode "GL_NEAREST_MIPMAP_LINEAR"
+gl_texture_anisotropy "8"
+registered "1""
+vid_fsaamode "1"
+vid_fsaa "4"
+volume "0.7""
+
 
 //Configs
 alias	"cam"		"exec cam.cfg"
