--- a/lq1/default.cfg
+++ b/lq1/default.cfg
@@ -8,7 +8,7 @@ bind	"d"			"+moveright"
 bind	"SPACE"		"+jump"
 bind	"ALT"		"+strafe"
 bind	"SHIFT"		"+speed"
-bind	"e"		    "+moveup"
+bind	"e"		"+moveup"
 bind	"CTRL"		"+movedown"
 
 //Weapon Keys
@@ -30,32 +30,29 @@ bind 	"MWHEELUP"	"impulse 10"
 bind 	"MWHEELDOWN" "impulse 12"
 
 //Menus
-bind	"f1"		"help"
-//bind	"f1"		"toggle r_drawviewmodel"
+bind	"f1"		"toggle r_drawviewmodel"
 bind	"f2"		"menu_save"
 bind	"f3"		"menu_load"
 bind	"f4"		"menu_options"
-bind	"f5"		"menu_multiplayer"
-//bind	"f5"		"toggle chase_active"
+bind	"f5"		"toggle chase_active"
 bind	"f6"		"echo Saving; wait; save lq_quick"
 bind	"f9"		"echo Loading; wait; load lq_quick" 
 bind	"f10"		"echo f10 is unbound"
 bind    "f12"       "screenshot"
-bind    "PRINTSCREEN" "screenshot"
 bind	"PAUSE"		"pause"
 bind	"ESCAPE"	"togglemenu"
 bind	"`"			"toggleconsole"
 bind	"t"			"messagemode"
-bind	"enter"		"messagemode"
 bind 	"TAB" 		"+showscores"
 
+bind "F1" "toggle r_drawviewmodel"
+bind "F5" "toggle chase_active"
 
 //Misc
 bind	"+"		"sizeup"
 bind	"="		"sizeup"
 bind	"-"		"sizedown"
-+mlook
-+speed
+
 
 //Cvars
 gl_texturemode "GL_NEAREST_MIPMAP_LINEAR"
@@ -64,16 +61,20 @@ registered "1""
 vid_fsaamode "1"
 vid_fsaa "4"
 volume "0.7""
-
-
+scr_sbarscale 4
+scr_conscale 4
+scr_menuscale 4
+scr_autoscale
++mlook
++speed
++
 //Configs
-alias	"cam"		"exec cam.cfg"
 alias	"dev"		"exec dev.cfg"
 alias	"zoom90"	"exec zoom90.cfg"
 alias	"zoom120"	"exec zoom120.cfg"
 
 //Alias
-alias	"freeze"	"toggle sv_freezenonclients;echo toggled_freeze"
+alias	"freeze"	"toggle sv_freezenonclients;echo toggled_freeze
 alias 	"idkfa"		"impulse 9"
 alias 	"fullammo"	"impulse 9"
 alias	"quad"		"impulse 255"
