iron wail map menu support

--- a/build_components.json
+++ b/build_components.json
@@ -22,13 +22,14 @@
         "base_dir": "lq1",
         "source_if_missing": "",
         "files_pak0": [
-            "progs.dat",
             "gfx.wad",
             "demo1.dem",
             "demo2.dem",
             "demo3.dem"
         ],
-        "files_pak1": [],
+        "files_pak1": [
+            "progs.dat"
+        ],
         "files_unpacked": []
     },
     "config": {
@@ -664,7 +665,6 @@
             "gfx/box_tr.lmp",
             "gfx/colormap.lmp",
             "gfx/complete.lmp",
-            "gfx/conback.lmp",
             "gfx/dim_drct.lmp",
             "gfx/dim_ipx.lmp",
             "gfx/dim_modm.lmp",
@@ -710,6 +710,10 @@
             "gfx/menumods.lmp"
         ],
         "files_pak1": [
+            "gfx/sp_maps.lmp",
+            "gfx/mainmenu.lmp",
+            "gfx/conback.lmp",
+            "gfx/menumods.lmp",
             "gfx/pop.lmp"
         ],
         "files_unpacked": []
