added -config.cfg and flame0.mdl
added -config.cfg  which just contains
vid_width "1280"
vid_height "800"
which is needed to change the default res in qs based engines
and flame0.mdl was added for joequake support

--- a/build_components.json
+++ b/build_components.json
@@ -41,6 +41,7 @@
         ],
         "files_pak1": [],
         "files_unpacked": [
+            ["-config.cfg", "config.cfg"],
             "cam.cfg",
             "dev.cfg",
             "zoom90.cfg",
@@ -310,6 +311,7 @@
             "progs/dog.mdl",
             "progs/end1.mdl",
             "progs/eyes.mdl",
+            "progs/flame0.mdl",
             "progs/flame.mdl",
             "progs/flame2.mdl",
             "progs/g_light.mdl",
