alot of engine specific commands added
alot of engine specific commands added to get LibreQuake to look and play more consistently between engines
still gonna do more work to this file later just wanting to back this up

--- a/lq1/default.cfg
+++ b/lq1/default.cfg
@@ -9,6 +9,7 @@ bind	"SPACE"		"+jump"
 bind	"ALT"		"+strafe"
 bind	"SHIFT"		"+speed"
 bind	"e"		    "+moveup"
+bind	"c"		"+movedown"
 bind	"CTRL"		"+movedown"
 
 //Weapon Keys
@@ -58,13 +59,32 @@ bind	"-"		"sizedown"
 +speed
 
 //Cvars
-gl_texturemode "GL_NEAREST_MIPMAP_LINEAR"
-gl_texture_anisotropy "8"
-registered "1""
-vid_fsaamode "1"
-vid_fsaa "4"
-volume "0.7""
 
+gl_texturemode gl_nearest_mipmap_linear
+gl_texturemode_sky gl_nearest
+gl_texturemode_hud gl_nearest
+gl_texturemode2d gl_nearest
+gl_smoothfont 0
+gl_texture_anisotropy 16
+vid_width "1280"
+vid_height "800
+vid_fsaamode 0
+vid_fsaa 8
+vid_conautoscale 3
+scr_pixelaspect 1
+scr_crosshairscale 3
+scr_menuscale 3
+scr_conscale 3
+scr_sbarscale 3
+cl_alwaysrun 0
+r_font_linear 0
+r_font_postprocess_mono 1
+registered 1
+volume 0.7
+gamma 1
+contrast 1
+sensitivity 
+mem 1024
 
 //Configs
 alias	"cam"		"exec cam.cfg"
@@ -81,3 +101,4 @@ alias +lq-zoom90 "fov 90;wait;fov 80;wait;fov 70;wait;fov 60;wait;fov 50;wait;fo
 alias -lq-zoom90 "fov 50;wait;fov 60;wait;fov 70;wait;fov 80;wait;fov 90"
 alias +lq-zoom120 "fov 110;wait;fov 100;wait;fov 90;wait;fov 80;wait;fov 70;wait;fov 60;wait;fov 50;wait;fov 40"
 alias -lq-zoom120 "fov 50;wait;fov 60;wait;fov 70;wait;fov 80;wait;fov 90;wait;fov 100;wait;fov 110;wait;fov 120"
+vid_restart
