--- a/lq1/dev.cfg
+++ b/lq1/dev.cfg
@@ -7,7 +7,6 @@ alias	"quad"		"impulse 255"
 // binds
 bind v noclip
 bind n notarget
-bind # "toggle developer"
 bind f "toggle r_fullbright"
 bind h "toggle r_showbboxes"
 bind b "toggle r_showtris"
@@ -21,8 +20,6 @@ clear
 echo v = noclip
 echo " "
 echo n = notarget
-echo " "
-bind # = developer mode
 echo " "
 echo f = fullbright
 echo " "
@@ -39,3 +36,6 @@ echo " "
 echo l = quad
 echo " "
 echo k = kill
+
+echo [NOTICE] If u used the "c" for swim down "freeze" has now overwriten it.
+echo if u were using default LibreQuake keybinds "ctrl" key is also bound to swim down
