updated with strings to disable some of the dp features by default

--- a/lq1/default.cfg
+++ b/lq1/default.cfg
@@ -59,7 +59,6 @@ bind	"-"		"sizedown"
 +speed
 
 //Cvars
-
 gl_texturemode gl_nearest_mipmap_linear
 gl_texturemode_sky gl_nearest
 gl_texturemode_hud gl_nearest
@@ -76,9 +75,14 @@ scr_crosshairscale 3
 scr_menuscale 3
 scr_conscale 3
 scr_sbarscale 3
+cl_stainmaps 0
+cl_decals 0
 cl_alwaysrun 0
+cl_particles_quake 1
+cl_beams_polygons 0
 r_font_linear 0
 r_font_postprocess_mono 1
+r_menutint 0.99 0.46 0.34
 registered 1
 volume 0.7
 gamma 1
