--- a/lq1/default.cfg
+++ b/lq1/default.cfg
@@ -83,6 +83,7 @@ cl_beams_polygons 0
 r_font_linear 0
 r_font_postprocess_mono 1
 r_menutint 0.99 0.46 0.34
+r_waterscroll 10
 registered 1
 volume 0.7
 gamma 1
