--- a/lq1/default.cfg
+++ b/lq1/default.cfg
@@ -84,12 +84,15 @@ r_font_linear 0
 r_font_postprocess_mono 1
 r_menutint 0.99 0.46 0.34
 r_waterscroll 10
+r_waterwarp 0.2
+r_particles 2
+r_stains 0
 registered 1
 volume 0.7
 gamma 1
 contrast 1
-sensitivity 
-mem 1024
+sensitivity 3
+
 
 //Configs
 alias	"cam"		"exec cam.cfg"
