added files for markv
doesn't exactly work since markv seems to embed its pak into the program so doesn't get over written but if any other port uses these files it will hopefully work for those

--- a/build_components.json
+++ b/build_components.json
@@ -716,6 +716,8 @@
             "gfx/mainmenu.lmp",
             "gfx/conback.lmp",
             "gfx/menumods.lmp",
+            "gfx/levels.lmp",
+            "gfx/demos.lmp",
             "gfx/pop.lmp"
         ],
         "files_unpacked": []
