--- a/lq1/default.cfg
+++ b/lq1/default.cfg
@@ -63,6 +63,8 @@ gl_texturemode gl_nearest_mipmap_linear
 gl_texturemode_sky gl_nearest
 gl_texturemode_hud gl_nearest
 gl_texturemode2d gl_nearest
+gl_overbright 1
+gl_overbright_model 1
 gl_smoothfont 0
 gl_texture_anisotropy 16
 vid_width "1280"
@@ -92,7 +94,9 @@ volume 0.7
 gamma 1
 contrast 1
 sensitivity 3
-
+topcolor 11
+bottomcolor 10
+crosshair 0
 
 //Configs
 alias	"cam"		"exec cam.cfg"
