slight change to comment's and the echo at the end of dev.cfg

--- a/lq1/dev.cfg
+++ b/lq1/dev.cfg
@@ -3,6 +3,8 @@
 alias	"freeze"	"toggle sv_freezenonclients;echo toggled_freeze"
 alias 	"fullammo"	"impulse 9"
 alias	"quad"		"impulse 255"
+
+//Host_Timescale Aliases
 alias  ht10  "host_timescale 10;echo 10x speed [Max];bind ] ht10;bind [ ht9""
 alias  ht9  "host_timescale 9;echo 9x speed;bind ] ht10;bind [ ht8""
 alias  ht8  "host_timescale 8;echo 8x speed;bind ] ht9;bind [ ht7""
@@ -73,6 +75,6 @@ echo " "
 echo [ = game speed down
 echo " "
 echo ' = game speed reset
-
-echo [NOTICE] If u used the "c" for swim down "freeze" has now overwriten it.
+echo " "
+echo [NOTICE] If u used the "c" for swim down "bind c freeze" has now overwriten it.
 echo if u were using default LibreQuake keybinds "ctrl" key is also bound to swim down
